Bug 361721 - various issues with small grid sizes
Summary: various issues with small grid sizes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-13 13:49 UTC by Alexander Koppe
Modified: 2016-04-15 18:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Koppe 2016-04-13 13:49:15 UTC
1) it is currently not possible to set the grid size to anything smaller than 2x2 px,
for pixel art a grid of 1x1 pixels would be usefull

2 )when the grid is set to 2x2 pixels, it sometimes has 2x1 or 1x2 cells for some rows

Reproducible: Sometimes

Steps to Reproduce:
1. try to create a grid of 1x1 px (currently not possible)
2. create a 2x2 px grid
3. experience strange behaviour (sometimes)
Comment 1 Halla Rempt 2016-04-13 13:53:17 UTC
I can confirm the issue.
Comment 2 Dmitry Kazakov 2016-04-15 18:22:49 UTC
Git commit e6c23b2765dd007b7b10ec480036d657d443d159 by Dmitry Kazakov.
Committed on 15/04/2016 at 18:22.
Pushed by dkazakov into branch 'master'.

Fix wrong values of Grid spacing when changing the spin box

1) KisAspectRatioLocker blocks the signal of the second spinbox,
   but the configuration should be updated only when both the
   spinboxes are updated. Therefore a new signal in KisAspectRatioLocker
   has been implemented, which notifies the receivers that both boxes
   are ready.

2) Allow 1 px grid :)

Fixes T2245

M  +5    -0    libs/ui/kis_aspect_ratio_locker.cpp
M  +4    -0    libs/ui/kis_aspect_ratio_locker.h
M  +6    -8    plugins/dockers/griddocker/grid_config_widget.cpp
M  +8    -8    plugins/dockers/griddocker/grid_config_widget.ui

http://commits.kde.org/krita/e6c23b2765dd007b7b10ec480036d657d443d159