Fix wrong values of Grid spacing when changing the spin box

1) KisAspectRatioLocker blocks the signal of the second spinbox,
   but the configuration should be updated only when both the
   spinboxes are updated. Therefore a new signal in KisAspectRatioLocker
   has been implemented, which notifies the receivers that both boxes
   are ready.

2) Allow 1 px grid :)

Fixes T2245
BUG:361721